--- a/apitest/package.json
+++ b/apitest/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^4.1.0",
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/router": "^4.1.0",
+    "angular-loading-bar": "^0.9.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ng-loading-bar": "0.0.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
   },
