--- a/apitest/package.json
+++ b/apitest/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/router": "^4.1.0",
     "angular-loading-bar": "^0.9.0",
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "mongoose": "^4.9.7",
     "ng-loading-bar": "0.0.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
