--- a/apitest/package.json
+++ b/apitest/package.json
@@ -23,10 +23,15 @@
     "angular-loading-bar": "^0.9.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express-session": "^1.15.2",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.7",
     "ng-loading-bar": "0.0.8",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
   },
