routen soweit fertig

--- a/apitest/package.json
+++ b/apitest/package.json
@@ -20,18 +20,25 @@
     "@angular/platform-browser": "^4.1.0",
     "@angular/platform-browser-dynamic": "^4.1.0",
     "@angular/router": "^4.1.0",
+    "acl": "^0.4.10",
     "angular-loading-bar": "^0.9.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express-jwt": "^5.3.0",
+    "express-jwt-permissions": "^0.5.0",
     "express-session": "^1.15.2",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^7.4.0",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^4.9.7",
     "ng-loading-bar": "0.0.8",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "password-hash": "^1.2.2",
+    "permission": "^1.0.4",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.5"
   },
