--- a/serverapi/forum/package.json
+++ b/serverapi/forum/package.json
@@ -30,10 +30,18 @@
     "express": "^4.15.2",
     "http": "0.0.0",
     "jsonwebtoken": "^7.4.0",
+    "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.1",
+    "mongodb": "^2.2.26",
+    "mongodb-fixture": "^1.0.0",
     "mongoose": "^4.9.8",
+    "mongoose-fixture": "^0.4.1",
+    "mongoose-fixture-loader": "^1.0.2",
     "ng2-jwt": "^0.2.0",
+    "ng2-pagination": "^2.0.1",
     "path": "^0.12.7",
+    "pow-mongodb-fixtures": "^0.14.0",
+    "pow-mongoose-fixtures": "^0.3.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
