--- a/serverapi/forum/package.json
+++ b/serverapi/forum/package.json
@@ -8,7 +8,8 @@
     "build": "ng build && node server",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "testserver": "jasmine-node --verbose server.spec.js"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +43,7 @@
     "path": "^0.12.7",
     "pow-mongodb-fixtures": "^0.14.0",
     "pow-mongoose-fixtures": "^0.3.0",
+    "request": "^2.81.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -52,13 +54,14 @@
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
+    "jasmine-node": "^1.14.5",
     "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
