--- a/serverapi/forum/src/tsconfig.app.json
+++ b/serverapi/forum/src/tsconfig.app.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "allowJS": true,
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "baseUrl": "",
