--- a/serverapi/forum/tsconfig.json
+++ b/serverapi/forum/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowJs": true,
     "module": "es2015",
     "outDir": "./dist/out-tsc",
     "baseUrl": "src",
