CreateUser Component erstellt

--- a/serverapi/forum/package.json
+++ b/serverapi/forum/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && node server",
+    "build": " ng build && node server ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -26,6 +26,7 @@
     "angular2-auth": "^0.1.6",
     "angular2-jsonwebtoken": "^0.8.1",
     "angular2-jwt": "^0.2.3",
+    "angular2-masonry": "^0.4.0",
     "axios": "^0.16.1",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
@@ -40,8 +41,13 @@
     "mongoose": "^4.9.8",
     "mongoose-fixture": "^0.4.1",
     "mongoose-fixture-loader": "^1.0.2",
+    "mydatepicker": "^2.0.20",
+    "ng2-date-picker": "^1.4.3",
     "ng2-jwt": "^0.2.0",
     "ng2-pagination": "^2.0.1",
+    "ngx-bootstrap": "^1.7.1",
+    "ngx-facebook": "^2.4.0",
+    "nodemailer": "^4.0.1",
     "path": "^0.12.7",
     "pow-mongodb-fixtures": "^0.14.0",
     "pow-mongoose-fixtures": "^0.3.0",
